syntax = "proto3";

option java_package = "io.grpc.examples";
option objc_class_prefix = "HLW";
option go_package = "products";
option csharp_namespace = "Google.Protobuf.products";

package products;

enum Status {
    Ok = 0;
    Failed = 1;
}

message Product {
  int64  Id = 1;
  string Name = 2;
  string Description = 3;
  string Barcode = 4;
  bytes  Bitmap = 5;
}

message AddProductRequest {
  string Name = 2;
  string Description = 3;
  string Code = 4;
  bytes  Bitmap = 5;
}

message ProductsResponse {
  repeated Product Products = 1;
}

message ResultResponse {
  Status Status = 1;
}

message ProductsRequest {

}

message RemoveProductRequest {
 int64 Id = 1;
}

service ProductService {
  rpc Add (AddProductRequest) returns (ResultResponse) {}
  rpc Update (Product) returns (ResultResponse) {}
  rpc Delete (RemoveProductRequest) returns (ResultResponse) {}
  rpc GetAll (ProductsRequest)  returns (ProductsResponse) {}
}
